# ai-moderated-blog

./: .env  .gitignore  .pre-commit-config.yaml  README.md  local.yml  pyproject.toml  requirements.txt  tests.yml
compose/local/: entrypoint.sh  start  start_tests
compose/local/django/: Dockerfile  tests.Dockerfile
compose/local/postgres/: pg_hba.conf
src/: manage.py
src/analytics/: api.py  modules.py  validators.py
src/analytics/schemas/: analytics.py
src/analytics/services/: analytics.py
src/api/: api.py  asgi.py  celery.py  schemas.py  services.py  urls.py  wsgi.py
src/api/settings/: base.py  local.py
src/auth/: api.py  schemas.py
src/authentication/: api.py  schemas.py
src/custom_users/: api.py  managers.py  models.py  permissions.py  schemas.py
src/custom_users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_email.py  0004_alter_user_email.py  0005_user_first_name_user_last_name.py  0006_alter_user_first_name_alter_user_last_name.py
src/posts/: api.py  exceptions.py  models.py  modules.py  permissions.py  schemas.py  services.py  signals.py  validators.py
src/posts/migrations/: 0001_initial.py  0002_reply_parent_reply.py  0003_remove_post_is_blocked_remove_reply_blocked.py  0004_comment_is_blocked_post_is_blocked_reply_is_blocked.py  0005_autoreplyconfig.py  0006_remove_autoreplyconfig_comment_autoreplyconfig_post.py  0007_alter_reply_parent_reply.py  (+1 more)
src/utils/: db_config.py
tests/: __init__.py  conftest.py
tests/integration_tests/: posts_tests.py  test_auth.py
tests/unit_tests/: dummy_test.py  profanity.py
(+14 files in other folders)
